Fix logo size on mobile devices

--- a/css/style.css
+++ b/css/style.css
@@ -94,12 +94,18 @@ body {
 }
 
 @media screen and (max-width: 495px) {
+  .logo-board img {
+    width: 90%;
+  }
   .neonText {
     font-size: 5.2rem;
   }
 }
 
 @media screen and (max-width: 375px) {
+  logo-board img {
+    width: 95%;
+  }
   .neonText {
     font-size: 4.2rem;
   }
